# luppa

./: .gitignore  Cargo.toml  README.md  fix-enhanced-ocr.patch  fixes.rs  ocr_fix.patch  validation_fix.patch
src/: lib.rs  main.rs  passport_validator.rs
src/ml/: feature_extraction.rs  mod.rs  simple_validator.rs  text_correction.rs  training.rs  validation.rs
src/models/: data.rs  mod.rs  rules.rs
src/processing/: batch_visual_verification.rs  biometric.rs  cleaning.rs  enhanced_ocr.rs  extractors.rs  field_correction.rs  image.rs  image.rs.bak  image_ops.rs  image_processor.rs  mod.rs  mrz.rs  ocr.rs  pki.rs  security.rs  security_features.rs
src/processing/backup/: image_processor.rs  ocr.rs.bak  security.rs.bak
src/utils/: error.rs  mod.rs
src/validation/: biometric.rs  database.rs  expiry.rs  format.rs  mod.rs  mrz.rs  pki.rs  security.rs
src/verification/: mod.rs  mrtd.rs
test_data/: README.md
