[package]
name = "luppa"
version = "0.1.0"
edition = "2021"
description = "A comprehensive passport validation system in Rust"

[dependencies]
chrono = "0.4"
image = "0.24"
imageproc = "0.23"  # Image processing for OCR enhancement
tesseract = "0.13"
thiserror = "1.0"
tempfile = "3.8"
base64 = "0.21"
which = "4.4"
regex = "1.5"
rayon = "1.5.10"
serde = { version = "1.0", features = ["derive"] } # For ML model serialization
serde_json = "1.0"  # For ML model configuration
lazy_static = "1.4.0"  # For efficient regex pattern initialization
