[package]
name = "luppa"
version = "0.1.0"
edition = "2021"
description = "A comprehensive passport validation system in Rust with ICAO Doc 9303 compliance"

[dependencies]
chrono = "0.4"
image = "0.24"
imageproc = "0.23"
tesseract = "0.15"
thiserror = "1.0"
tempfile = "3.8"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.16"  # For cryptographic operations
rust-crypto = "0.2"  # Additional cryptographic functions
rsa = "0.9"  # For RSA operations
sha2 = "0.10"  # For SHA hashing
log = "0.4"  # Logging
env_logger = "0.10"  # Logging implementation
regex = "1.10"  # For pattern matching
whatlang = "0.14"  # Language detection for automatic OCR language selection
clap = { version = "4.3", features = ["derive"] }  # Command line argument parsing

[[bin]]
name = "mrtd_demo"
path = "src/bin/mrtd_demo.rs"
